force-app/main/default/objects/Fact__c/Fact__c.object-meta.xml
<CustomObject>
    <description>A single fact extracted from a CV, carrying its own certainty and evidence.</description>
    <label>Fact</label>
    <nameField>
        <label>Fact</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>