force-app/main/default/objects/Fact__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <type>MasterDetail</type>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Facts</relationshipLabel>
    <relationshipName>Facts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>