force-app/main/default/objects/Fact__c/fields/Conflict__c.field-meta.xml
<CustomField>
    <fullName>Conflict__c</fullName>
    <label>Conflict</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>