force-app/main/default/objects/Fact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Skill</fullName><default>false</default><label>Skill</label></value>
            <value><fullName>Experience</fullName><default>false</default><label>Experience</label></value>
            <value><fullName>Education</fullName><default>false</default><label>Education</label></value>
            <value><fullName>Achievement</fullName><default>false</default><label>Achievement</label></value>
            <value><fullName>Certification</fullName><default>false</default><label>Certification</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>